changed all html&css from .md to .html

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <title>HTML- An Introduction To Web Developement</title>
     </head>
+
     <body>
-<!-- section header -->
-        <h1>HTML - An Introduction To Web Developement</h1>
-<!-- table of contents -->
-<!-- add internal links to headers --> 
+        <!-- section header -->
+        <header>
+            <h1>HTML - An Introduction To Web Developement</h1>
+        </header>
+        <!-- table of contents -->
+        <!-- add internal links to headers -->
         <h2>Table of Contents</h2>
         <ul>
             <li>Empty Document</li>
         </ul>
-<!-- start of document -->
-<!-- heading - empty document -->
+        <!-- start of document -->
+        <!-- heading - empty document -->
         <h2>Empty Document</h2>
         <p>
             This section had no note worthy tasks.
         </p>
-<!-- end of document -->
+        <!-- end of document -->
     </body>
+
 </html>
