--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section01_CourseOrientation.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section01_CourseOrientation.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <title>HTML - Course Orientation</title>
     </head>
+
     <body>
-<!-- Section Header -->
-        <h1>Course Orientation</h1>
-<!-- Table of Contents -->
-<!-- add internal links to headers --> 
+        <!-- Section Header -->
+        <header>
+            <h1>Course Orientation</h1>
+        </header>
+        <!-- Table of Contents -->
+        <!-- add internal links to headers -->
         <h2>Table of Contents</h2>
         <ul>
             <li>Empty Document</li>
         </ul>
-<!-- Start of Document -->
-<!-- Heading - empty document -->
+        <!-- Start of Document -->
+        <!-- Heading - empty document -->
         <h2><b>Empty Document</b></h2>
         <p>
             This section had no note worthy tasks.
         </p>
-<!-- end of document -->
+        <!-- end of document -->
     </body>
+
 </html>
