re-formatted documents

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
@@ -6,23 +6,30 @@
     </head>
 
     <body>
-        <!-- section header -->
         <header>
+            <!--  header -->
             <h1>HTML - An Introduction To Web Developement</h1>
         </header>
-        <!-- table of contents -->
-        <!-- add internal links to headers -->
-        <h2>Table of Contents</h2>
-        <ul>
-            <li>Empty Document</li>
-        </ul>
-        <!-- start of document -->
-        <!-- heading - empty document -->
-        <h2>Empty Document</h2>
-        <p>
-            This section had no note worthy tasks.
-        </p>
-        <!-- end of document -->
+        <article>
+            <!-- table of contents -->
+            <h2>Table of Contents</h2>
+            <ul>
+                <li>Empty Document</li>
+            </ul>
+        </article>
+        <main>
+            <!-- main -->
+            <h2>Empty Document</h2>
+            <p>
+                This section had no note worthy tasks.
+            </p>
+        </main>
+        <footer>
+            <!-- footer -->
+            <p>
+                <i>document set to change</i>
+            </p>
+        </footer>
     </body>
 
 </html>
