--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section03_HTML-TheEssentials.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section03_HTML-TheEssentials.html
@@ -6,108 +6,126 @@
     </head>
 
     <body>
-        <!-- section header -->
-        <h1><b>HTML: The Essentials</b></h1>
-        <!-- table of contents -->
-        <!-- add internal links to headers -->
-        <h2><b>Table of Contents</b></h2>
-        <ul>
-            <li>Introduction to HTML
-                <ul>
-                    <li>Paragraph Elements</li>
-                    <li>Heading Elements</li>
-                    <li>HTML Boilerplate or otherwise known as the HTML Skeleton<< /li>
-                    <li>List Elements</li>
-                    <li>Anchor Tags</li>
-                    <li>Images</li>
-                    <li>Comments</li>
-                </ul>
-            </li>
-        </ul>
-        <!-- start of document -->
-        <!-- heading - introduction to html -->
-        <h2><b>Introduction to HTML</b></h2>
-        <p>
-            Taking a look at this saying, the <b>Purple Dino Danced</b>. We can break down what HTML is compared to and
-            how to explain what HTML is. HTML is the <b>'what'</b>in this sentence, in otherwords the dino, whereas the
-            purple is css and danced is js. HTML is what is being displayed or viewed, so the in short its the
-            <b>what</b>.
-        </p>
-        <p>
-            HTML is known as a markup language and stands for <b>Hypertext Markup Language</b>. It is not a full blown
-            programming language with complex logic, It's a way to mark up a document <i>(plain text)</i> and have a way
-            to indicate what is <b>bold</b>, <i>italic</i> or what is a <b><a href="https://www.google.com">link</a></b>
-            as an example, through what is known as elements or HTML elements.
-        </p>
-        <p>
-            To write HTML we use what is know as HTML elements, as exmaple:
-        <ul>
-            <li><b>&lt;p&gt;</b>
-                <ul>
-                    <li><i>This represents the paragraph element</i></li>
-                </ul>
-            </li>
-            <li><b>&lt;h1&gt;</b>
-                <ul>
-                    <li><i>This represents the main header on the page</i></li>
-                </ul>
-            </li>
-            <li><b>&lt;img&gt;</b>
-                <ul>
-                    <li><i>This embeds an image</i></li>
-                </ul>
-            </li>
-            <li><b>&lt;form&gt;</b>
-                <ul>
-                    <li><i>This represents a form</i></li>
-                </ul>
-            </li>
-        </ul>
-        These are some of the elements used to write HTML. Although above doesn't illustrate this, but we generally wrap
-        some form of content with what is knowns as &lt;opening tag&gt; and a &lt;/closing tag&gt;.
-        </p>
-        <p>
-            An example would be something like this &lt;h1&gt;This is a header&lt;/h1&gt; to represent the start and end
-            of the main header. You can also nest tags within elements, using the same example as before, you can make
-            the header bold, like so &lt;h1&gt;&lt;b&gt;This is a header in bold&lt;/b&gt;&lt;/h1&gt;.
-        </p>
-        <!-- sub-heading - paragraph elements -->
-        <h3><b>Paragraph Elements</b></h3>
-        <p>
-            The first element we look at is the &lt;p&gt; for paragraph, and this doesn't mean its only for text
-            purposes, you can have a paragraph for things you wish to group together. That could be a paragraph of
-            images or different pieces of a form. However for now we are only focused on textual paragraphs.
-        </p>
-        <!-- sub-heading - heading elements -->
-        <h3><b>Heading Elements</b></h3>
-        <p>
-            Write something here
-        </p>
-        <h3><b>HTML Boilerplate or otherwise known as the HTML Skeleton</b></h3>
-        <p>
-            Write Something here
-        </p>
-        <!-- sub-heading - list elements -->
-        <h3><b>List Elements</b></h3>
-        <p>
-            Write Something Here
-        </p>
-        <!-- sub-heading - anchor tags -->
-        <h3><b>Anchor Tags</b></h3>
-        <p>
-            Write Something Here
-        </p>
-        <!-- sub-heading - images -->
-        <h3><b>Images</b></h3>
-        <p>
-            Write Something Here
-        </p>
-        <!-- sub-heading - comments -->
-        <h3><b>Comments</b></h3>
-        <p>
-            Write something Here
-        </p>
-        <!-- end of document -->
+        <header>
+            <!-- header -->
+            <h1><b>HTML: The Essentials</b></h1>
+        </header>
+        <article>
+            <!-- table of contents -->
+            <h2><b>Table of Contents</b></h2>
+            <ul>
+                <li>Introduction to HTML
+                    <ul>
+                        <li>Paragraph Elements</li>
+                        <li>Heading Elements</li>
+                        <li>HTML Boilerplate or otherwise known as the HTML Skeleton<< /li>
+                        <li>List Elements</li>
+                        <li>Anchor Tags</li>
+                        <li>Images</li>
+                        <li>Comments</li>
+                    </ul>
+                </li>
+            </ul>
+        </article>
+        <main>
+            <!-- main -->
+            <!-- heading - introduction to html -->
+            <h2><b>Introduction to HTML</b></h2>
+            <p>
+                Taking a look at this saying, the <b>Purple Dino Danced</b>. We can break down what HTML is compared to
+                and
+                how to explain what HTML is. HTML is the <b>'what'</b>in this sentence, in otherwords the dino, whereas
+                the
+                purple is css and danced is js. HTML is what is being displayed or viewed, so the in short its the
+                <b>what</b>.
+            </p>
+            <p>
+                HTML is known as a markup language and stands for <b>Hypertext Markup Language</b>. It is not a full
+                blown
+                programming language with complex logic, It's a way to mark up a document <i>(plain text)</i> and have a
+                way
+                to indicate what is <b>bold</b>, <i>italic</i> or what is a <b><a
+                        href="https://www.google.com">link</a></b>
+                as an example, through what is known as elements or HTML elements.
+            </p>
+            <p>
+                To write HTML we use what is know as HTML elements, as exmaple:
+            <ul>
+                <li><b>&lt;p&gt;</b>
+                    <ul>
+                        <li><i>This represents the paragraph element</i></li>
+                    </ul>
+                </li>
+                <li><b>&lt;h1&gt;</b>
+                    <ul>
+                        <li><i>This represents the main header on the page</i></li>
+                    </ul>
+                </li>
+                <li><b>&lt;img&gt;</b>
+                    <ul>
+                        <li><i>This embeds an image</i></li>
+                    </ul>
+                </li>
+                <li><b>&lt;form&gt;</b>
+                    <ul>
+                        <li><i>This represents a form</i></li>
+                    </ul>
+                </li>
+            </ul>
+            These are some of the elements used to write HTML. Although above doesn't illustrate this, but we generally
+            wrap
+            some form of content with what is knowns as &lt;opening tag&gt; and a &lt;/closing tag&gt;.
+            </p>
+            <p>
+                An example would be something like this &lt;h1&gt;This is a header&lt;/h1&gt; to represent the start and
+                end
+                of the main header. You can also nest tags within elements, using the same example as before, you can
+                make
+                the header bold, like so &lt;h1&gt;&lt;b&gt;This is a header in bold&lt;/b&gt;&lt;/h1&gt;.
+            </p>
+            <!-- sub-heading - paragraph elements -->
+            <h3><b>Paragraph Elements</b></h3>
+            <p>
+                The first element we look at is the &lt;p&gt; for paragraph, and this doesn't mean its only for text
+                purposes, you can have a paragraph for things you wish to group together. That could be a paragraph of
+                images or different pieces of a form. However for now we are only focused on textual paragraphs.
+            </p>
+            <!-- sub-heading - heading elements -->
+            <h3><b>Heading Elements</b></h3>
+            <p>
+                Write something here
+            </p>
+            <h3><b>HTML Boilerplate or otherwise known as the HTML Skeleton</b></h3>
+            <p>
+                Write Something here
+            </p>
+            <!-- sub-heading - list elements -->
+            <h3><b>List Elements</b></h3>
+            <p>
+                Write Something Here
+            </p>
+            <!-- sub-heading - anchor tags -->
+            <h3><b>Anchor Tags</b></h3>
+            <p>
+                Write Something Here
+            </p>
+            <!-- sub-heading - images -->
+            <h3><b>Images</b></h3>
+            <p>
+                Write Something Here
+            </p>
+            <!-- sub-heading - comments -->
+            <h3><b>Comments</b></h3>
+            <p>
+                Write something Here
+            </p>
+        </main>
+        <footer>
+            <!-- footer -->
+            <p>
+                <i>document set to change.</i>
+            </p>
+        </footer>
     </body>
 
 </html>
