--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section01_CourseOrientation.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section01_CourseOrientation.html
@@ -6,23 +6,30 @@
     </head>
 
     <body>
-        <!-- Section Header -->
         <header>
+            <!-- header -->
             <h1>Course Orientation</h1>
         </header>
-        <!-- Table of Contents -->
-        <!-- add internal links to headers -->
-        <h2>Table of Contents</h2>
-        <ul>
-            <li>Empty Document</li>
-        </ul>
-        <!-- Start of Document -->
-        <!-- Heading - empty document -->
-        <h2><b>Empty Document</b></h2>
-        <p>
-            This section had no note worthy tasks.
-        </p>
-        <!-- end of document -->
+        <article>
+            <!-- Table of Contents -->
+            <h2>Table of Contents</h2>
+            <ul>
+                <li>Empty Document</li>
+            </ul>
+        </article>
+        <main>
+            <!-- main -->
+            <h2><b>Empty Document</b></h2>
+            <p>
+                This section had no note worthy tasks.
+            </p>
+        </main>
+        <footer>
+            <!-- footer -->
+            <p>
+                <i>document set to change.</i>
+            </p>
+        </footer>
     </body>
 
 </html>
