removed italics from footer

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section02_AnIntroductionToWebDevelopement.html
@@ -28,7 +28,7 @@
         <footer>
             <!-- footer -->
             <p>
-                <i>document set to change</i>
+                document set to change
             </p>
         </footer>
     </body>
