--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section03_HTML-TheEssentials.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section03_HTML-TheEssentials.html
@@ -183,7 +183,7 @@
         <footer>
             <!-- footer -->
             <p>
-                <i>document set to change.</i>
+                document set to change.
             </p>
         </footer>
     </body>
