--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section04_HTML-NextSteps&Semantics.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section04_HTML-NextSteps&Semantics.html
@@ -97,7 +97,7 @@
         <footer>
             <!-- footer -->
             <p>
-                <i>document set to change.</i>
+                document set to change.
             </p>
         </footer>
     </body>
