finish layout of section05 html&css but not the notes

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
@@ -15,26 +15,88 @@
             <!-- table of contents -->
             <h2>Table of Contents</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Introducing HTML tables
+                    <ul>
+                        <li>Tables: TR, TD, and TH element</li>
+                        <li>Tables: Thead, Tbody and Tfoot Elements</li>
+                        <li>Tables: Colspan & Rowspan</li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+                <li>The Form Element
+                    <ul>
+                        <li>Common input types</li>
+                        <li>The all important label element</li>
+                        <li>HTML Buttons</li>
+                        <li>The name attriubute</li>
+                        <li>Radio buttons, Checkboxes & Selects</li>
+                        <li>Range & Text area</li>
+                        <li>HTML Validations</li>
+                    </ul>
+                </li>
             </ul>
         </article>
         <main>
             <!-- main -->
-            <h2>heading here</h2>
-            <p>
-                write here
-            </p>
+            <section>
+                <!-- introducing html tables -->
+                <h2>Introducing HTML tables</h2>
+                <p>
+                    write here
+                </p>
+                <h3>Tables: TR, TD, and TH element</h3>
+                <p>
+                    write here
+                </p>
+                <h3>Tables: Thead, Tbody and Tfoot Elements</h3>
+                <p>
+                    write here
+                </p>
+                <h3>Tables: Colspan & Rowspan</h3>
+            </section>
+            <section>
+                <!-- The form element -->
+                <h2>The Form Element</h2>
+                <p>
+                    write here
+                </p>
+                <h3>Common input types</h3>
+                <p>
+                    write here
+                </p>
+                <h3>The all important label element</h3>
+                <p>
+                    write here
+                </p>
+                <h3>HTML Buttons</h3>
+                <p>
+                    write here
+                </p>
+                <h3>The name attriubute</h3>
+                <p>
+                    write here
+                </p>
+                <h3>Radio buttons, Checkboxes & Selects</h3>
+                <p>
+                    write here
+                </p>
+                <h3>Range & Text area</h3>
+                <p>
+                    write here
+                </p>
+                <h3>HTML Validations</h3>
+                <p>
+                    write here
+                </p>
+            </section>
         </main>
         <footer>
-                <!-- footer -->
-                <p>
-                    document set to change.
-                </p>
-         </footer>
+            <!-- footer -->
+            <p>
+                document set to change.
+            </p>
+        </footer>
     </body>
 
 </html>
