incomplete section05 for html&css

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
@@ -15,24 +15,22 @@
             <!-- table of contents -->
             <h2>Table of Contents</h2>
             <ul>
-                <li>Introducing HTML tables
+                <li><a href="#int_htm">Introducing HTML tables</a>
                     <ul>
-                        <li>Tables: TR, TD, and TH element</li>
-                        <li>Tables: Thead, Tbody and Tfoot Elements</li>
-                        <li>Tables: Colspan & Rowspan</li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="#tab_tr">Tables: TR, TD, and TH element</a></li>
+                        <li><a href="#tab_the">Tables: Thead, Tbody and Tfoot Elements</a></li>
+                        <li><a href="#tab_col">Tables: Colspan & Rowspan</a></li>
                     </ul>
                 </li>
-                <li>The Form Element
+                <li><a href="#the_for">The Form Element</a>
                     <ul>
-                        <li>Common input types</li>
-                        <li>The all important label element</li>
-                        <li>HTML Buttons</li>
-                        <li>The name attriubute</li>
-                        <li>Radio buttons, Checkboxes & Selects</li>
-                        <li>Range & Text area</li>
-                        <li>HTML Validations</li>
+                        <li><a href="#com_inp">Common input types</a></li>
+                        <li><a href="#the_all">The all important label element</a></li>
+                        <li><a href="#htm_but">HTML Buttons</a></li>
+                        <li><a href="#the_nam">The name attriubute</a></li>
+                        <li><a href="#rad_but">Radio buttons, Checkboxes & Selects</a></li>
+                        <li><a href="#ran_tex">Range & Text area</a></li>
+                        <li><a href="#htm_val">HTML Validations</a></li>
                     </ul>
                 </li>
             </ul>
@@ -41,51 +39,64 @@
             <!-- main -->
             <section>
                 <!-- introducing html tables -->
-                <h2>Introducing HTML tables</h2>
+                <h2 id="int_htm">Introducing HTML tables</h2>
+                <p>
+                    <ul>
+                        <li>&lt;table&gt;&lt;/table&gt;</li>
+                    </ul>
+                    In short, tables are a why to show tabular data such as rows and columns, as you would expect to see in a table. In the past tables were not just used for tabular data but used to layout a website as well, whereas today you don't really need to do that.
+                </p>
+                <p>
+                    The way you begin a table is with the table element shown above, there are various child elements that go within a table element.
+                </p>
+                <h3 id="tab_tr">Tables: TR, TD, and TH element</h3>
+                <p>
+                    <ul>
+                        <li>&lt;tr&gt;&lt;/tr&gt;</li>
+                        <li>&lt;td&gt;&lt;/td&gt;</li>
+                        <li>&lt;th&gt;&lt;/th&gt;</li>
+                    </ul>
+                </p>
+                <h3 id="tab_the">Tables: Thead, Tbody and Tfoot Elements</h3>
                 <p>
                     write here
                 </p>
-                <h3>Tables: TR, TD, and TH element</h3>
+                <h3 id="tab_col">Tables: Colspan & Rowspan</h3>
                 <p>
                     write here
                 </p>
-                <h3>Tables: Thead, Tbody and Tfoot Elements</h3>
-                <p>
-                    write here
-                </p>
-                <h3>Tables: Colspan & Rowspan</h3>
             </section>
             <section>
                 <!-- The form element -->
-                <h2>The Form Element</h2>
+                <h2 id="the_for">The Form Element</h2>
                 <p>
                     write here
                 </p>
-                <h3>Common input types</h3>
+                <h3 id="com_inp">Common input types</h3>
                 <p>
                     write here
                 </p>
-                <h3>The all important label element</h3>
+                <h3 id="the_all">The all important label element</h3>
                 <p>
                     write here
                 </p>
-                <h3>HTML Buttons</h3>
+                <h3 id="htm_but">HTML Buttons</h3>
                 <p>
                     write here
                 </p>
-                <h3>The name attriubute</h3>
+                <h3 id="the_nam">The name attriubute</h3>
                 <p>
                     write here
                 </p>
-                <h3>Radio buttons, Checkboxes & Selects</h3>
+                <h3 id="rad_but">Radio buttons, Checkboxes & Selects</h3>
                 <p>
                     write here
                 </p>
-                <h3>Range & Text area</h3>
+                <h3 id="ran_tex">Range & Text area</h3>
                 <p>
                     write here
                 </p>
-                <h3>HTML Validations</h3>
+                <h3 id="htm_val">HTML Validations</h3>
                 <p>
                     write here
                 </p>
