finish section05 for html&css

--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05.1_55-MarathonFormExercise.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05.1_55-MarathonFormExercise.html
@@ -16,12 +16,12 @@
             <!-- table of contents -->
             <h2>Table of Contents</h2>
             <ul>
-                <li>The Form</li>
+                <li><a href="#the_for">The Form</a></li>
             </ul>
         </article>
         <main>
             <!-- main -->
-            <h2>The Form</h2>
+            <h2 id="the_for">The Form</h2>
             <h2>Race Registration!</h2>
             <form action="/tacos">
                 <div>
