--- a/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
+++ b/html&css-studies/theWebDeveloperBootcamp-ColtSteele/section05_HTML-Forms&Tables.html
@@ -453,15 +453,15 @@
                         </p>
                         <section>
                             <div>
-                                <input type="radio" name="food" id="mc" value="McDonalds"> 
+                                <input type="radio" name="food" id="mc" value="McDonalds">
                                 <label for="mc">Mc Donalds</label>
                             </div>
                             <div>
-                                <input type="radio" name="food" id="king" value="Burger King"> 
+                                <input type="radio" name="food" id="king" value="Burger King">
                                 <label for="king">Burger King</label>
                             </div>
                             <div>
-                                <input type="radio" name="food" id="kfc" value="KFC"> 
+                                <input type="radio" name="food" id="kfc" value="KFC">
                                 <label for="kfc">KFC</label>
                             </div>
                         </section>
@@ -469,7 +469,7 @@
                             <label for="drinks">What drink you want with that?</label>
                             <select name="drink" id="drinks">
                                 <option value="">-- Select an option --</option>
-                                <option value="coco_cola">Coco Cola</option>
+                                <option value="coca_cola">Coca Cola</option>
                                 <option value="fanta">Fanta</option>
                                 <option value="sprite">Sprite</option>
                             </select>
