--- a/html&css/webdev-Colt/06/06_CSS-TheVeryBasics.html
+++ b/html&css/webdev-Colt/06/06_CSS-TheVeryBasics.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>CSS - The Very Basics</title>
-        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
